# StratMaster

./: .dependency_registry.json  .gitattributes  .gitignore  .markdownlint.json  .metadata_never_index  .pre-commit-config.yaml  .prettierignore  .security.cfg  .vale.ini  .yamllint  .yamllint.yaml  ALPHA_READINESS_SUMMARY.md  API_GUIDE.md  CHANGELOG.md  CODE_DOC_PARITY_TOOLS.md  CONTRIBUTING.md  CURRENT_STATE_SUMMARY.md  DEVELOPER_GUIDE.md  DEVELOPMENT_GUIDE.md  DEVOPS_GUIDE.md  DEVOPS_IMPLEMENTATION_SUMMARY.md  DOCS_REPORT.md  DocRebuild.md  ENGINEERING_STATUS.md  ENHANCED_IMPLEMENTATION.md  FRONTIER_ANALYSIS.md  GAP_ANALYSIS.md  GITHUB_ISSUES_GENERATED.md  GITHUB_ISSUES_MANUAL.md  GITHUB_ISSUES_SYNC_REPORT.md  GITHUB_SYNC_INSTRUCTIONS.md  IMPLEMENTATION_COMPLETION_REPORT.md  IMPLEMENTATION_HANDOFF.md  IMPLEMENTATION_ISSUES.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_COMPLETE.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS_UPDATE.md  IMPLEMENTATION_SUMMARY.md  ISSUES.md  (+52 more)
.githooks/: pre-push
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
.healing_backups/: snapshot_20250924_203258.json
.test_venv/: pyvenv.cfg
.trunk/: trunk.yaml
.venv-test/: pyvenv.cfg
DECISIONS/: ACH_BOARD.md  README.md
RELIABILITY/: SLOs.yml
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/src-tauri/src/: lib.rs  main.rs
bench/: retrieval_performance_report.json  sprint4_optimization_report.json
configs/: litellm-proxy.yaml  production-config-template.yaml  v2-flags.example.json
data/: sbom.json  slsa-provenance.json
database/: migrate.sh
docs/: BRANCH_PROTECTION.md  CURRENT_STATE_SUMMARY.md  ENGINEERING_STATUS.md  MIGRATION.md  OFFLINE_SETUP.md  README.md  SPRINT_IMPLEMENTATION_SUMMARY.md  _sidebar.md  api.md  architecture.md  backlog.md  changelog.md  deployment.md  dev-quickstart.md  development.md  faq.md  gap-analysis.md  infrastructure.md  legacy-docs-migrated.md  open-questions.md  operations-guide.md  parity-report.md  pr-blueprints.md  requirements.txt  scratch_gap_analysis.md  security.md  troubleshooting.md  upgrade-plan.md
docs.new/: index.md  mkdocs.yml  requirements.txt
github_issues_ready/: README.md  issue_01_sprint0_mobilize__baseline__architecture_assessment__dependency_audit.md  issue_02_impl_realtime_collaboration_engine.md  issue_03_impl_evidenceguided_model_recommender_v2.md  issue_04_impl_retrieval_benchmarking__latency_validation.md  issue_05_impl_advanced_caching__performance_optimisation.md  issue_06_impl_phase_3_ux_quality_gates.md  issue_07_impl_predictive_strategy_analytics.md  issue_08_impl_eventdriven_microservices_architecture.md  issue_09_impl_industryspecific_strategy_templates.md  issue_10_impl_custom_model_finetuning_platform.md  issue_11_impl_advanced_knowledge_graph_reasoning.md
helm/: .helmignore  Chart.yaml  values-development.yaml  values-production.yaml  values-staging.yaml  values.yaml
internal/: CODE_AUDIT.md  GAP_ANALYSIS.md  README.md
issues/: 001-real-time-collaboration.md  002-model-recommender-v2.md  003-retrieval-benchmarks.md  004-advanced-caching.md  005-phase3-ux-quality.md  006-predictive-analytics.md  007-event-architecture.md  008-industry-templates.md  009-fine-tuning-platform.md  (+1 more)
(+405 files in other folders)
