# StratMaster Monorepo Configuration
# This file defines the workspace structure for tools that support it

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stratmaster"
version = "0.1.0"
description = "StratMaster AI-powered Brand Strategy platform"
requires-python = ">=3.11"
authors = [{ name = "StratMaster Team" }]

[project.optional-dependencies]
issues = ["issuesuite>=0.1.4"]

# Workspace definition - list all packages for tools that support monorepo structure
[tool.setuptools.packages.find]
where = ["packages/*/src", "apps/*/src"]
namespaces = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "C4", "PL"]
ignore = ["E501", "PLR0913", "PLR0911"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["PLR2004"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
namespace_packages = true
explicit_package_bases = true

# Workspace packages - helps tools understand the monorepo structure
[[tool.mypy.overrides]]
module = [
    "stratmaster_api.*",
    "research_mcp.*",
    "knowledge_mcp.*",
    "router_mcp.*",
    "evals_mcp.*",
    "compression_mcp.*",
    "expertise_mcp.*"
]
ignore_missing_imports = false

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["packages", "apps", "tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--disable-warnings"
]

[tool.coverage.run]
source = ["packages", "apps"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError"
]
