[package]
name = "stratmaster-desktop"
version = "0.1.0"
description = "StratMaster Desktop Application"
authors = ["StratMaster Team"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "stratmaster_desktop"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stratmaster-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [
  "macos-private-api",
  "dialog-all",
  "fs-read",
  "fs-write",
  "http-all",
  "notification-all",
  "shell-open",
  "clipboard-write-text",
  "clipboard-read-text"
] }
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-http = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-clipboard-manager = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
dirs = "6.0"
log = "0.4"
env_logger = "0.11"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-updater = "2.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]